redis-pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: redis-app-pod
  labels: 
    name: redis-app-pod
    app: demo-voting-app

spec:
  containers: 
    - name: redis-app
      image: redis
      ports:
        - containerPort: 6379
