result-app-pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: result-app-pod
  labels: 
    name: result-app-pod
    app: demo-voting-app

spec:
  containers: 
    - name: result-app
      image: dockersamples/examplevotingapp_result
      ports: 
        - containerPort: 80
