dep-svc.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: simplilearnproject
spec:
  replicas: 3
  selector:
    matchLabels:
      app: slearn
  template:
    metadata:
      labels:
        app: slearn
    spec:
      containers:
        - name: cont1
          image: nginx
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 10m

---
kind: Service
apiVersion: v1
metadata:
  name: simplilearnproject-svc
spec:
  type: ClusterIP
  selector:
    app: slearn
  ports:
   - port: 80
     targetPort: 80
