load-balancer.yml
---
apiVersion: v1
kind: Service
metadata:
  name: simplilearnproject-svc
  namespace: simplilearn-namespace
spec:
  type: NodePort
  selector:
    app: simplilearnproject
  ports:
  - port: 80
    targetPort: 3000
